# PyEVTK

./: .gitattributes  LICENSE  MANIFEST  README.md  pyproject.toml  setup.cfg  setup.py
evtk/: LICENSE  __init__.py  evtk.py  hl.py  version.py  vtk.py  xml.py
evtk/examples/: group.py  image.py  lowlevel.py  points.py  rectilinear.py  structured.py  unstructured.py
src/: LICENSE  __init__.py  evtk.py  hl.py  version.py  vtk.py  xml.py
src/examples/: group.py  image.py  lines.py  lowlevel.py  points.py  poly_lines.py  rectilinear.py  structured.py  unstructured.py
test/: lines.py  poly_lines.py  runall.py
