[metadata]
name    = evtk
version = 2.0.0
url     = https://github.com/paulo-herrera/PyEVTK.git
author  = Paulo A. Herrera R.
author_email = paulo.herrera.eirl@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Exports data as binary VTK files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.0